# mqmgateway

./: README.md  config.yaml
libmodmqttsrv/: config.cpp  config.hpp  imodbuscontext.hpp  modbus_client.hpp  modbus_context.cpp  modbus_context.hpp  modbus_messages.hpp  modbus_thread.cpp  modbus_thread.hpp  modmqtt.cpp  modmqtt.hpp  mosquitto.cpp  mosquitto.hpp  mqttclient.cpp  mqttclient.hpp  mqttobject.cpp  mqttobject.hpp  register_poll.cpp  register_poll.hpp
modmqttd/: config.template.yaml
readerwriterqueue/: atomicops.h
unittests/: CMakeLists.txt  mockedmodbuscontext.cpp  mockedmodbuscontext.hpp  mockedmqttimpl.cpp  mockedmqttimpl.hpp  mockedserver.hpp  mqtt_command_tests.cpp  mqtt_remote_call_tests.cpp  mqtt_rpc_tests.cpp
